examples/prom-with-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prometheus-example
  name: prometheus-example-ingress
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-example
            port:
              number: 9090
        path: /
        pathType: Prefix
