examples/prometheus-self.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prometheus-self
  name: prometheus-self-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-self
            port:
              number: 9090
        path: /
        pathType: Prefix
